force-app/main/default/objects/cdcpc__RD_Pricing_ThirdParty_TestQty__c/cdcpc__RD_Pricing_ThirdParty_TestQty__c.object-meta.xml
<CustomObject>
    <label>RDPricingThirdPartyTestQty</label>
    <nameField>
        <label>RDPricingThirdPartyTestQty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingThirdPartyTestQty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>