force-app/main/default/objects/cdcpc__RD_Pricing_ThirdParty_TestQty__c/fields/cdcpc__ADMERK__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ADMERK__c</fullName>
    <label>ADMERK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>