force-app/main/default/objects/cdcpc__RD_Pricing_ThirdParty_TestQty__c/fields/cdcpc__QtyUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__QtyUL__c</fullName>
    <label>QtyUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>