force-app/main/default/objects/cdcpc__RD_Pricing_ThirdParty_TestQty__c/fields/cdcpc__RPVM084__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RPVM084__c</fullName>
    <label>RPVM084</label>
    <length>255</length>
    <type>Text</type>
</CustomField>